.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
13:49:13 **** Incremental Build of configuration Debug for project clase_19bis ****
make all 
make: No se hace nada para 'all'.
07:54:59 **** Incremental Build of configuration Debug for project clase_19bis ****
make all 
Building file: ../src/clase_19bis.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/clase_19bis.d" -MT"src/clase_19bis.o" -o "src/clase_19bis.o" "../src/clase_19bis.c"
Finished building: ../src/clase_19bis.c
 
Building file: ../src/producto.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/producto.d" -MT"src/producto.o" -o "src/producto.o" "../src/producto.c"
Finished building: ../src/producto.c
 
Building target: clase_19bis
Invoking: GCC C Linker
gcc  -o "clase_19bis"  ./src/clase_19bis.o ./src/gets.o ./src/menues.o ./src/producto.o ./src/validations.o   -lm
Finished building target: clase_19bis
 
07:55:31 **** Incremental Build of configuration Debug for project clase_19bis ****
make all 
Building file: ../src/clase_19bis.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/clase_19bis.d" -MT"src/clase_19bis.o" -o "src/clase_19bis.o" "../src/clase_19bis.c"
Finished building: ../src/clase_19bis.c
 
Building file: ../src/producto.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/producto.d" -MT"src/producto.o" -o "src/producto.o" "../src/producto.c"
Finished building: ../src/producto.c
 
Building target: clase_19bis
Invoking: GCC C Linker
gcc  -o "clase_19bis"  ./src/clase_19bis.o ./src/gets.o ./src/menues.o ./src/producto.o ./src/validations.o   -lm
Finished building target: clase_19bis
 
07:58:59 **** Incremental Build of configuration Debug for project clase_19bis ****
make all 
Building file: ../src/producto.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/producto.d" -MT"src/producto.o" -o "src/producto.o" "../src/producto.c"
Finished building: ../src/producto.c
 
Building target: clase_19bis
Invoking: GCC C Linker
gcc  -o "clase_19bis"  ./src/clase_19bis.o ./src/gets.o ./src/menues.o ./src/producto.o ./src/validations.o   -lm
Finished building target: clase_19bis
 
08:23:10 **** Incremental Build of configuration Debug for project clase_19bis ****
make all 
Building file: ../src/producto.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/producto.d" -MT"src/producto.o" -o "src/producto.o" "../src/producto.c"
../src/producto.c: In function ‘producto_guardarEnArchivo’:
../src/producto.c:403:24: error: expected expression before ‘)’ token
  403 |    sprintf(bufferWrite,)
      |                        ^
../src/producto.c:398:6: warning: unused variable ‘indiceVacio’ [-Wunused-variable]
  398 |  int indiceVacio;
      |      ^~~~~~~~~~~
../src/producto.c:396:6: warning: unused variable ‘rs’ [-Wunused-variable]
  396 |  int rs,i;
      |      ^~
make: *** [src/subdir.mk:32: src/producto.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
08:23:18 **** Incremental Build of configuration Debug for project clase_19bis ****
make all 
Building file: ../src/producto.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/producto.d" -MT"src/producto.o" -o "src/producto.o" "../src/producto.c"
Finished building: ../src/producto.c
 
Building target: clase_19bis
Invoking: GCC C Linker
gcc  -o "clase_19bis"  ./src/clase_19bis.o ./src/gets.o ./src/menues.o ./src/producto.o ./src/validations.o   -lm
Finished building target: clase_19bis
 
08:27:29 **** Incremental Build of configuration Debug for project clase_19bis ****
make all 
Building file: ../src/producto.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/producto.d" -MT"src/producto.o" -o "src/producto.o" "../src/producto.c"
../src/producto.c: In function ‘producto_guardarEnArchivo’:
../src/producto.c:399:6: warning: unused variable ‘indiceVacio’ [-Wunused-variable]
  399 |  int indiceVacio;
      |      ^~~~~~~~~~~
../src/producto.c:396:6: warning: unused variable ‘rs’ [-Wunused-variable]
  396 |  int rs,i;
      |      ^~
Finished building: ../src/producto.c
 
Building target: clase_19bis
Invoking: GCC C Linker
gcc  -o "clase_19bis"  ./src/clase_19bis.o ./src/gets.o ./src/menues.o ./src/producto.o ./src/validations.o   -lm
Finished building target: clase_19bis
 
08:27:54 **** Incremental Build of configuration Debug for project clase_19bis ****
make all 
Building file: ../src/producto.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/producto.d" -MT"src/producto.o" -o "src/producto.o" "../src/producto.c"
Finished building: ../src/producto.c
 
Building target: clase_19bis
Invoking: GCC C Linker
gcc  -o "clase_19bis"  ./src/clase_19bis.o ./src/gets.o ./src/menues.o ./src/producto.o ./src/validations.o   -lm
Finished building target: clase_19bis
 
08:28:03 **** Incremental Build of configuration Debug for project clase_19bis ****
make all 
Building file: ../src/clase_19bis.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/clase_19bis.d" -MT"src/clase_19bis.o" -o "src/clase_19bis.o" "../src/clase_19bis.c"
Finished building: ../src/clase_19bis.c
 
Building file: ../src/producto.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/producto.d" -MT"src/producto.o" -o "src/producto.o" "../src/producto.c"
Finished building: ../src/producto.c
 
Building target: clase_19bis
Invoking: GCC C Linker
gcc  -o "clase_19bis"  ./src/clase_19bis.o ./src/gets.o ./src/menues.o ./src/producto.o ./src/validations.o   -lm
Finished building target: clase_19bis
 
08:28:42 **** Incremental Build of configuration Debug for project clase_19bis ****
make all 
Building file: ../src/clase_19bis.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/clase_19bis.d" -MT"src/clase_19bis.o" -o "src/clase_19bis.o" "../src/clase_19bis.c"
Finished building: ../src/clase_19bis.c
 
Building file: ../src/producto.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/producto.d" -MT"src/producto.o" -o "src/producto.o" "../src/producto.c"
Finished building: ../src/producto.c
 
Building target: clase_19bis
Invoking: GCC C Linker
gcc  -o "clase_19bis"  ./src/clase_19bis.o ./src/gets.o ./src/menues.o ./src/producto.o ./src/validations.o   -lm
Finished building target: clase_19bis
 
08:30:06 **** Incremental Build of configuration Debug for project clase_19bis ****
make all 
Building file: ../src/producto.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/producto.d" -MT"src/producto.o" -o "src/producto.o" "../src/producto.c"
Finished building: ../src/producto.c
 
Building target: clase_19bis
Invoking: GCC C Linker
gcc  -o "clase_19bis"  ./src/clase_19bis.o ./src/gets.o ./src/menues.o ./src/producto.o ./src/validations.o   -lm
Finished building target: clase_19bis
 
08:32:08 **** Incremental Build of configuration Debug for project clase_19bis ****
make all 
Building file: ../src/producto.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/producto.d" -MT"src/producto.o" -o "src/producto.o" "../src/producto.c"
Finished building: ../src/producto.c
 
Building target: clase_19bis
Invoking: GCC C Linker
gcc  -o "clase_19bis"  ./src/clase_19bis.o ./src/gets.o ./src/menues.o ./src/producto.o ./src/validations.o   -lm
Finished building target: clase_19bis
 
08:32:30 **** Incremental Build of configuration Debug for project clase_19bis ****
make all 
Building file: ../src/producto.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/producto.d" -MT"src/producto.o" -o "src/producto.o" "../src/producto.c"
../src/producto.c: In function ‘producto_guardarEnArchivo’:
../src/producto.c:404:25: warning: unknown escape sequence: '\N'
  404 |     sprintf(bufferWrite,"%s,%s,%.2f,%d\NN",
      |                         ^~~~~~~~~~~~~~~~~~
Finished building: ../src/producto.c
 
Building target: clase_19bis
Invoking: GCC C Linker
gcc  -o "clase_19bis"  ./src/clase_19bis.o ./src/gets.o ./src/menues.o ./src/producto.o ./src/validations.o   -lm
Finished building target: clase_19bis
 
08:32:36 **** Incremental Build of configuration Debug for project clase_19bis ****
make all 
Building file: ../src/producto.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/producto.d" -MT"src/producto.o" -o "src/producto.o" "../src/producto.c"
Finished building: ../src/producto.c
 
Building target: clase_19bis
Invoking: GCC C Linker
gcc  -o "clase_19bis"  ./src/clase_19bis.o ./src/gets.o ./src/menues.o ./src/producto.o ./src/validations.o   -lm
Finished building target: clase_19bis
 
08:35:28 **** Incremental Build of configuration Debug for project clase_19bis ****
make all 
Building file: ../src/clase_19bis.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/clase_19bis.d" -MT"src/clase_19bis.o" -o "src/clase_19bis.o" "../src/clase_19bis.c"
Finished building: ../src/clase_19bis.c
 
Building target: clase_19bis
Invoking: GCC C Linker
gcc  -o "clase_19bis"  ./src/clase_19bis.o ./src/gets.o ./src/menues.o ./src/producto.o ./src/validations.o   -lm
Finished building target: clase_19bis
 
